# ai-shopping-concierge

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8a7355a4887c_add_persona_scores_table.py  be62591eb572_add_memory_enabled_to_users.py  c4c1eec2659c_add_data_completeness_to_products.py  ea7244c39792_initial_tables.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: graph.py  product_discovery.py  response_synth.py  safety_constraint.py  state.py  triage_router.py
backend/app/api/routes/: chat.py  conversations.py  health.py  memory.py  persona.py  products.py  users.py
backend/app/catalog/: auto_seed.py  ingredient_interactions.py  ingredient_parser.py  openbf_client.py  product_service.py  safety_index.py  seed_fixture.json
backend/app/core/: database.py  llm.py  rate_limit.py  redis.py  vector_store.py
backend/app/memory/: background_extractor.py  conflict_detector.py  constraint_store.py  langmem_config.py  memory_manager.py  prompt_optimizer.py
backend/app/models/: __init__.py  conversation.py  persona.py  product.py  user.py
backend/app/persona/: monitor.py  traits.py  vector_extractor.py
backend/scripts/: compute_persona_vectors.py  migrate_redis_to_langmem.py  seed_catalog.py
backend/tests/: conftest.py
backend/tests/eval/: conftest.py  test_eval_memory.py  test_eval_persona.py  test_eval_safety.py
backend/tests/integration/: conftest.py  test_agent_pipeline.py  test_chat_api.py
backend/tests/unit/: test_auto_seed.py  test_background_extractor.py  test_chat_stream.py  test_config.py  test_conflict_detector.py  test_constraint_store.py  test_demo_llm.py  test_graph.py  test_health.py  test_hybrid_search.py  test_ingredient_interactions.py  test_ingredient_parser.py  test_langmem_store.py  test_llm.py  test_main_lifespan.py  test_memory_consent.py  test_memory_hotpath.py  test_memory_manager.py  test_models.py  test_ownership_validation.py  test_persist_conversation.py  test_persona_interventions.py  test_persona_routes.py  test_persona_scoring.py  test_persona_vectors.py  test_product_discovery.py  test_rate_limit.py  test_response_synth.py  test_routes_conversations.py  test_routes_memory.py  test_routes_persona.py  test_routes_products.py  test_routes_users.py  test_safety_constraint.py  test_safety_index.py  test_safety_pre_filter.py  test_triage_router.py  test_vector_store.py
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  PERSONA_VECTORS.md
examples/: basic_usage.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: chat.test.ts  chat.ts  client.ts  conversations.ts  memory.ts  persona.ts  products.ts  users.ts
frontend/src/components/: Skeleton.test.tsx  Skeleton.tsx
frontend/src/components/chat/: ChatInput.test.tsx  ChatInput.tsx  ChatView.test.tsx  ChatView.tsx  MessageBubble.test.tsx  MessageBubble.tsx  MessageList.test.tsx  MessageList.tsx  PersonaSidebar.tsx
frontend/src/components/layout/: Header.test.tsx  Header.tsx  MainLayout.test.tsx  MainLayout.tsx  Sidebar.test.tsx  Sidebar.tsx  UserSelector.test.tsx  UserSelector.tsx
frontend/src/components/persona/: AlertBanner.test.tsx  AlertBanner.tsx  DriftChart.test.tsx  DriftChart.tsx  PersonaMonitor.test.tsx  PersonaMonitor.tsx  TraitGauge.test.tsx  TraitGauge.tsx
frontend/src/components/products/: ProductCard.test.tsx  ProductCard.tsx  SafetyBadge.test.tsx  SafetyBadge.tsx
frontend/src/components/profile/: AllergyManager.test.tsx  AllergyManager.tsx  MemoryViewer.test.tsx  MemoryViewer.tsx  UserProfile.test.tsx  UserProfile.tsx
frontend/src/hooks/: useChat.ts  usePersonaStream.ts  useProducts.ts  useUser.ts
frontend/src/stores/: chatStore.test.ts  chatStore.ts  personaStore.test.ts  personaStore.ts  userStore.test.ts  userStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
infra/nginx/: nginx.conf
scripts/: demo_scenario.py  generate_test_users.py
src/shopping_concierge/agents/: __init__.py  base.py  comparison.py  deal_finding.py  needs_analysis.py  product_research.py  transaction.py
src/shopping_concierge/config/: settings.py
src/shopping_concierge/prompts/: templates.py
src/shopping_concierge/tools/: __init__.py  mock_tools.py
tests/: conftest.py
tests/fixtures/: mock_data.py
tests/unit/: test_comparison.py  test_deal_finding.py  test_needs_analysis.py  test_product_research.py  test_transaction.py
