[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "beauty-concierge"
version = "0.1.0"
description = "AI Beauty Shopping Concierge — multi-agent system for personalized skincare recommendations"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Konstantin Perikov"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "chromadb>=0.5.0,<0.6.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.11.0",
    "bandit>=1.7.0",
]
persona = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/persona/*",
    "*/tests/*",
    "app/core/vector_store.py",
    "app/catalog/openbf_client.py",
    "app/catalog/product_service.py",
    "app/memory/prompt_optimizer.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
